_old/dinoco_docs/src/content/v0.0.1/ko-kr/orm/find-first.md
# find_first

최대 하나의 레코드를 검색하는 데 사용됩니다.

---

## 무엇을 할 수 있나요

`find_many`와 동일한 메서드를 노출합니다:

- `select`
- `cond`
- `take`
- `skip`
- `order_by`
- `includes`
- `count`
- `read_in_primary`
- `execute`

## 메서드 설명

- `.select::&lt;T&gt;()`: 기본 프로젝션을 사용자 지정 프로젝션으로 변경합니다.
- `.cond(...)`: 검색에 필터를 추가합니다.
- `.take(...)`: 고려할 최대 레코드 수를 제한합니다.
- `.skip(...)`: 첫 번째 결과를 선택하기 전에 레코드를 건너뜠습니다.
- `.order_by(...)`: 어떤 레코드를 먼저 고려해야 할지 정의합니다.
- `.includes(...)`: 주 항목과 함께 관계를 로드합니다.
- `.count(...)`: 프로젝션에서 관계 카운터를 계산합니다.
- `.read_in_primary()`: 주 데이터베이스에서 읽기를 강제합니다.
- `.execute(&client)`: 쿼리를 실행하고 최대 하나의 항목을 반환합니다.

## 반환 값

`select::&lt;T&gt;()`가 없으면 반환 값은 다음과 같습니다:

```rust
DinocoResult<Option<M>>
```

`select::&lt;T&gt;()`가 있으면 반환 값은 다음과 같이 변경됩니다:

```rust
DinocoResult<Option<T>>
```

## 기본 예시

```rust
let user = dinoco::find_first::<User>()
    .cond(|w| w.id.eq(10))
    .execute(&client)
    .await?;
```

## select를 사용한 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserSummary {
    id: i64,
    name: String,
}

let user = dinoco::find_first::<User>()
    .select::<UserSummary>()
    .cond(|w| w.id.eq(1_i64))
    .execute(&client)
    .await?;
```

## 관계를 사용한 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let user = dinoco::find_first::<User>()
    .select::<UserWithPosts>()
    .cond(|x| x.id.eq(1_i64))
    .includes(|x| x.posts())
    .execute(&client)
    .await?;
```

## 정렬을 사용한 예시

```rust
let latest_user = dinoco::find_first::<User>()
    .order_by(|x| x.id.desc())
    .execute(&client)
    .await?;
```

## 다음 단계

- [**`find_many::&lt;M&gt;()`**](/v0.0.1/orm/find-many): 여러 레코드를 검색합니다.
- [**`count::&lt;M&gt;()`**](/v0.0.1/orm/count): 레코드 수입니다.
